--- a/Informes/Oficial_PG1_Informe.html
+++ b/Informes/Oficial_PG1_Informe.html
@@ -4046,62 +4046,40 @@ mental</h1>
 inmenso, lleno de posibilidades y retos. Sin embargo, si nuestro
 objetivo es adentrarnos en este mundo, debemos tomar en cuenta nuestra
 salud por encima de todo.</p>
-<div id="tema-delimitado" class="section level3">
-<h3>Tema Delimitado:</h3>
-<ul>
-<li>Estudio sobre la relación del lenguaje de programación que usan los
-desarrolladores en su trabajo y su salud mental</li>
-</ul>
+<div id="relevancia-e-importancia" class="section level3">
+<h3>Relevancia e importancia</h3>
+<p>Actualmente se ve una preferencia enorme por las empresas en usar las
+nuevas tecnologías, por lo que si queremos enfocarnos en este rubro será
+de mucha utilidad saber cómo es que influye el lenguaje de programación
+que usan con la calidad de vida que tienen los desarrolladores.</p>
 </div>
-<div id="pregunta-de-investigación" class="section level3">
-<h3>Pregunta de investigación:</h3>
-<p>¿Cómo influye el lenguaje programación que se usa al trabajar en la
-salud mental de un programador?</p>
-<ul>
-<li>Variable dependiente: Salud Mental</li>
-<li>Variable independiente: Lenguajes de programación que se usan al
-trabajar</li>
-</ul>
-</div>
-<div id="hipótesis" class="section level3">
-<h3>Hipótesis:</h3>
-<p>“A mayor popularidad del lenguaje de programación que utilice el
-desarrollador, tendrá una mejor salud mental en su vida diaria”</p>
-</div>
-<div id="relevancia-y-factibilidad-del-tema" class="section level3">
-<h3>Relevancia y factibilidad del tema:</h3>
-<p><strong>Relevancia:</strong> - Actualmente se ve una preferencia
-enorme por las empresas en usar las nuevas tecnologías, por lo que si
-queremos enfocarnos en este rubro será de mucha utilidad saber cómo es
-que influye el lenguaje de programación que usan con la calidad de vida
-que tienen los desarrolladores.</p>
-<p><strong>Factibilidad:</strong> - Consideramos que el proyecto es
-viable ya que usamos bases de datos de fuentes confiables como
-Stackoverflow (la cual es una plataforma abierta y la base de datos
-resume información pública) y la otra de PLDB (un proyecto opensource
-creado por desarrolladores para la recolección de datos sobre lenguajes
-de programación)</p>
-<hr />
+<div id="planificación-y-factibilidad" class="section level3">
+<h3>Planificación y Factibilidad</h3>
+<p>Consideramos que el proyecto es viable ya que usamos bases de datos
+de fuentes confiables como Stackoverflow (la cual es una plataforma
+abierta y la base de datos resume información pública) y la otra de PLDB
+(un proyecto opensource creado por desarrolladores para la recolección
+de datos sobre lenguajes de programación)</p>
+<div id="planificación-diagrama-de-gantt" class="section level4">
+<h4>Planificación (Diagrama de Gantt)</h4>
+<p>Para entender el desarrollo del estudio hasta el momento, se muestra
+el siguiente <strong>Diagrama de Gantt</strong> con la planificación de
+las diferentes actividades y entregas del proyecto.</p>
+<div class="DiagrammeR html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-37cf069c8dfd60244f25" style="width:672px;height:480px;"></div>
+<script type="application/json" data-for="htmlwidget-37cf069c8dfd60244f25">{"x":{"diagram":"\ngantt\ndateFormat  YYYY-MM-DD\ntitle Diagrama de Gantt\n\nsection Main things\nPreparar PG01:first_1,2023-04-15, 3d\nEntrega PG01:first_2,2023-04-18, 2d\nPreparar PG02:first_3,2023-04-20, 11d\nEntrega PG02:first_4,2023-05-01, 2d\nPreparar PG03:first_5,2023-05-03, 21d\nEntrega PG03:first_6,2023-05-24, 2d\nInforme PG1:first_7,2023-05-26, 9d\nEntrega Informe:first_8, 2023-06-04,1d\n\nsection PG01\nDiagrama de Gantt:first_1, 2023-04-15, 12h\nDelimitar tema:first_2, after first_1, 12h\nVariables de analisis: first_3, after first_2, 6h\nLimpieza de la base de datos: first_4, after first_2, 12h\nAnalizar la factibilidad: first_5, after first_3, 1d\n\nsection PG02\nReplantear objetivos:first_6, 2023-04-20, 1d\nLimpieza de tablas:first_7, after first_6, 5d\nCorrección de variables:first_8, after first_7, 5d\n\nsection PG03\nAnálisis univariado:first_9, 2023-05-03, 12d\nAnálisis bivariado:first_10, 2023-05-10, 10d\nAnálisis multivariado:first_11, 2023-05-15, 7d\nEscribir análisis:first_12, after first_11, 2d\n\nsection Informe PG1\nCorrecciones:first_13, 2023-05-26, 3d\nUnion de PG0x:first_14, after first_13, 2d\nVerificar ortografía:first_15, after first_14, 2d\nInforme prolijo:first_16, after first_15, 2d\n"},"evals":[],"jsHooks":[]}</script>
 </div>
 </div>
-<div id="planificación" class="section level2">
-<h2>Planificación</h2>
-<div class="DiagrammeR html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-297112074904e30b8446" style="width:672px;height:480px;"></div>
-<script type="application/json" data-for="htmlwidget-297112074904e30b8446">{"x":{"diagram":"\ngantt\ndateFormat  YYYY-MM-DD\ntitle Diagrama de Gantt\n\nsection Main things\nPreparar PG01:first_1,2023-04-15, 3d\nEntrega PG01:first_2,2023-04-18, 2d\nPreparar PG02:first_3,2023-04-20, 11d\nEntrega PG02:first_4,2023-05-01, 2d\nPreparar PG03:first_5,2023-05-03, 21d\nEntrega PG03:first_6,2023-05-24, 2d\nInforme PG1:first_7,2023-05-26, 9d\nEntrega Informe:first_8, 2023-06-04,1d\n\nsection PG01\nDiagrama de Gantt:first_1, 2023-04-15, 12h\nDelimitar tema:first_2, after first_1, 12h\nVariables de analisis: first_3, after first_2, 6h\nLimpieza de la base de datos: first_4, after first_2, 12h\nAnalizar la factibilidad: first_5, after first_3, 1d\n\nsection PG02\nReplantear objetivos:first_6, 2023-04-20, 1d\nLimpieza de tablas:first_7, after first_6, 5d\nCorrección de variables:first_8, after first_7, 5d\n\nsection PG03\nAnálisis univariado:first_9, 2023-05-03, 12d\nAnálisis bivariado:first_10, 2023-05-10, 10d\nAnálisis multivariado:first_11, 2023-05-15, 7d\nEscribir análisis:first_12, after first_11, 2d\n\nsection Informe PG1\nCorrecciones:first_13, 2023-05-26, 3d\nUnion de PG0x:first_14, after first_13, 2d\nVerificar ortografía:first_15, after first_14, 2d\nInforme prolijo:first_16, after first_15, 2d\n\n\n\n"},"evals":[],"jsHooks":[]}</script>
-<hr />
 </div>
 <div id="objetivos" class="section level2">
 <h2>Objetivos</h2>
 <div id="objetivo-principal" class="section level3">
-<h3>Objetivo principal:</h3>
-<ol style="list-style-type: decimal">
-<li>Demostrar que la salud mental del programador depende, en parte, del
-lenguaje de programación que escojas para trabajar.</li>
-</ol>
+<h3>Objetivo principal</h3>
+<p>Demostrar que la salud mental del programador depende, en parte, del
+lenguaje de programación que escojas para trabajar.</p>
 </div>
 <div id="objetivos-secundarios" class="section level3">
-<h3>Objetivos secundarios:</h3>
-<ol start="2" style="list-style-type: decimal">
+<h3>Objetivos secundarios</h3>
+<ul>
 <li><p>Demostrar que la popularidad de un lenguaje de programación no
 significa que trabajar con este brinde mayor satisfacción
 laboral.</p></li>
@@ -4109,14 +4087,13 @@ laboral.</p></li>
 de programación escogido por el programador y su salud mental.</p></li>
 <li><p>Encontrar una relación entre el salario que brinda el lenguaje de
 programación que usan los desarrolladores con su salud mental.</p></li>
-</ol>
-<hr />
+</ul>
 </div>
 </div>
 <div id="datos" class="section level2">
 <h2>Datos</h2>
-<div id="procesos-de-recolección-de-datos" class="section level3">
-<h3>Procesos de recolección de datos:</h3>
+<div id="recolección-de-datos" class="section level3">
+<h3>Recolección de datos</h3>
 <p>Nuestros datos se basarán en dos bases de datos:</p>
 <ul>
 <li>Programming language database (PLDB):
@@ -4133,37 +4110,29 @@ demografía, educación, puesto de trabajo, lenguaje de programación,
 satisfacción laboral, entre otros.</li>
 </ul></li>
 </ul>
-<pre class="r"><code>library(readr)
-
-languages = read_csv(&quot;https://pldb.com/pldb.csv&quot;)</code></pre>
-<pre><code>## Rows: 4840 Columns: 356
-## ── Column specification ────────────────────────────────────────────────────────
-## Delimiter: &quot;,&quot;
-## chr (119): title, type, id, creators, githubRepo, website, wikipedia, getSou...
-## dbl  (49): appeared, rank, languageRank, factCount, lastActivity, exampleCou...
-## lgl (188): isLanguage, hasComments, isOpenSource, hasSemanticIndentation, ha...
-## 
-## ℹ Use `spec()` to retrieve the full column specification for this data.
-## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.</code></pre>
-<pre class="r"><code>encuesta = read_csv(&quot;../db/upload_survey_results.csv&quot;)</code></pre>
-<pre><code>## Rows: 32977 Columns: 16
-## ── Column specification ────────────────────────────────────────────────────────
-## Delimiter: &quot;,&quot;
-## chr (15): MainBranch, Employment, RemoteWork, CodingActivities, DevType, Cou...
-## dbl  (1): ConvertedCompYearly
-## 
-## ℹ Use `spec()` to retrieve the full column specification for this data.
-## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.</code></pre>
 </div>
-<div id="variables-de-estudio-iniciales" class="section level3">
-<h3>Variables de estudio iniciales</h3>
+</div>
+<div id="población-muestra-y-muestreo" class="section level2">
+<h2>Población, muestra y muestreo</h2>
+<div id="población" class="section level3">
+<h3>Población</h3>
+</div>
+<div id="muestra" class="section level3">
+<h3>Muestra</h3>
+</div>
+<div id="muestreo" class="section level3">
+<h3>Muestreo</h3>
+</div>
+</div>
+<div id="variables-de-estudio-iniciales" class="section level2">
+<h2>Variables de estudio iniciales</h2>
 <p>En resumen, en esta sección se registran todas las variables
 utilizadas a partir de las dos bases de datos debidamente prolijas, con
 el objetivo de comprender adecuadamente el procesamiento de la
 información. En un principio, hay un total de <code>variables</code>
 variables.</p>
-<div id="encuestas-de-stakoverflow" class="section level4">
-<h4>Encuestas de Stakoverflow</h4>
+<div id="encuestas-de-stakoverflow" class="section level3">
+<h3>Encuestas de Stakoverflow</h3>
 <table style="width:100%;">
 <colgroup>
 <col width="24%" />
@@ -4280,8 +4249,8 @@ desarrollador</td>
 </tbody>
 </table>
 </div>
-<div id="pldb-lenguajes-de-programación" class="section level4">
-<h4>PLDB Lenguajes de Programación</h4>
+<div id="pldb-lenguajes-de-programación" class="section level3">
+<h3>PLDB Lenguajes de Programación</h3>
 <table style="width:100%;">
 <colgroup>
 <col width="24%" />
@@ -4356,6 +4325,65 @@ programación</td>
 </tbody>
 </table>
 </div>
+</div>
+<div id="librerías" class="section level2">
+<h2>Librerías</h2>
+<div id="carga-de-librerías" class="section level3">
+<h3>Carga de librerías</h3>
+</div>
+<div id="carga-de-datos" class="section level3">
+<h3>Carga de datos</h3>
+<pre class="r"><code>library(readr)
+
+languages = read_csv(&quot;https://pldb.com/pldb.csv&quot;)</code></pre>
+<pre><code>## Rows: 4840 Columns: 356
+## ── Column specification ────────────────────────────────────────────────────────
+## Delimiter: &quot;,&quot;
+## chr (119): title, type, id, creators, githubRepo, website, wikipedia, getSou...
+## dbl  (49): appeared, rank, languageRank, factCount, lastActivity, exampleCou...
+## lgl (188): isLanguage, hasComments, isOpenSource, hasSemanticIndentation, ha...
+## 
+## ℹ Use `spec()` to retrieve the full column specification for this data.
+## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.</code></pre>
+<pre class="r"><code>encuesta = read_csv(&quot;../db/upload_survey_results.csv&quot;)</code></pre>
+<pre><code>## Rows: 32977 Columns: 16
+## ── Column specification ────────────────────────────────────────────────────────
+## Delimiter: &quot;,&quot;
+## chr (15): MainBranch, Employment, RemoteWork, CodingActivities, DevType, Cou...
+## dbl  (1): ConvertedCompYearly
+## 
+## ℹ Use `spec()` to retrieve the full column specification for this data.
+## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.</code></pre>
+</div>
+</div>
+<div id="limpieza-de-datos" class="section level2">
+<h2>Limpieza de Datos</h2>
+<div id="encuestas-de-stakoverflow-1" class="section level3">
+<h3>Encuestas de Stakoverflow</h3>
+</div>
+<div id="pldb-lenguajes-de-programación-1" class="section level3">
+<h3>PLDB Lenguajes de Programación</h3>
+</div>
+</div>
+<div id="variables-de-estudio-finales" class="section level2">
+<h2>Variables de estudio Finales</h2>
+</div>
+<div id="preguntas-e-hipótesis" class="section level2">
+<h2>Preguntas e Hipótesis</h2>
+</div>
+<div id="análisis-descriptivo" class="section level2">
+<h2>Análisis Descriptivo</h2>
+<div id="análisis-univariado" class="section level3">
+<h3>Análisis univariado</h3>
+</div>
+<div id="análisis-bivariado" class="section level3">
+<h3>Análisis bivariado</h3>
+</div>
+<div id="análisis-multivariado" class="section level3">
+<h3>Análisis multivariado</h3>
+</div>
+<div id="conclusiones-parciales" class="section level3">
+<h3>Conclusiones Parciales</h3>
 </div>
 </div>
 
