--- a/PG2/S7_Fuente/S7_Informe.html
+++ b/PG2/S7_Fuente/S7_Informe.html
@@ -4070,8 +4070,8 @@ de datos sobre lenguajes de programación)</p>
 <p>Para entender el desarrollo del estudio hasta el momento, se muestra
 el siguiente <strong>Diagrama de Gantt</strong> con la planificación de
 las diferentes actividades y entregas del proyecto.</p>
-<div class="DiagrammeR html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-9ac216f73bd3ab7b59a3" style="width:672px;height:480px;"></div>
-<script type="application/json" data-for="htmlwidget-9ac216f73bd3ab7b59a3">{"x":{"diagram":"\ngantt\ndateFormat  YYYY-MM-DD\ntitle Diagrama de Gantt\n\nsection Main things\nPreparar PG01:first_1,2023-04-15, 3d\nEntrega PG01:first_2,2023-04-18, 2d\nPreparar PG02:first_3,2023-04-20, 11d\nEntrega PG02:first_4,2023-05-01, 2d\nPreparar PG03:first_5,2023-05-03, 21d\nEntrega PG03:first_6,2023-05-24, 2d\nInforme PG1:first_7,2023-05-26, 9d\nEntrega Informe:first_8, 2023-06-04,1d\n\nsection PG01\nDiagrama de Gantt:first_1, 2023-04-15, 12h\nDelimitar tema:first_2, after first_1, 12h\nVariables de analisis: first_3, after first_2, 6h\nLimpieza de la base de datos: first_4, after first_2, 12h\nAnalizar la factibilidad: first_5, after first_3, 1d\n\nsection PG02\nReplantear objetivos:first_6, 2023-04-20, 1d\nLimpieza de tablas:first_7, after first_6, 5d\nCorrección de variables:first_8, after first_7, 5d\n\nsection PG03\nAnálisis univariado:first_9, 2023-05-03, 12d\nAnálisis bivariado:first_10, 2023-05-10, 10d\nAnálisis multivariado:first_11, 2023-05-15, 7d\nEscribir análisis:first_12, after first_11, 2d\n\nsection Informe PG1\nCorrecciones:first_13, 2023-05-26, 3d\nUnion de PG0x:first_14, after first_13, 2d\nVerificar ortografía:first_15, after first_14, 2d\nInforme prolijo:first_16, after first_15, 2d\n"},"evals":[],"jsHooks":[]}</script>
+<div class="DiagrammeR html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-a6f529c0d4ef99d6cc1a" style="width:672px;height:480px;"></div>
+<script type="application/json" data-for="htmlwidget-a6f529c0d4ef99d6cc1a">{"x":{"diagram":"\ngantt\ndateFormat  YYYY-MM-DD\ntitle Diagrama de Gantt\n\nsection Main things\nPreparar PG01:first_1,2023-04-15, 3d\nEntrega PG01:first_2,2023-04-18, 2d\nPreparar PG02:first_3,2023-04-20, 11d\nEntrega PG02:first_4,2023-05-01, 2d\nPreparar PG03:first_5,2023-05-03, 21d\nEntrega PG03:first_6,2023-05-24, 2d\nInforme PG1:first_7,2023-05-26, 9d\nEntrega Informe:first_8, 2023-06-04,1d\n\nsection PG01\nDiagrama de Gantt:first_1, 2023-04-15, 12h\nDelimitar tema:first_2, after first_1, 12h\nVariables de analisis: first_3, after first_2, 6h\nLimpieza de la base de datos: first_4, after first_2, 12h\nAnalizar la factibilidad: first_5, after first_3, 1d\n\nsection PG02\nReplantear objetivos:first_6, 2023-04-20, 1d\nLimpieza de tablas:first_7, after first_6, 5d\nCorrección de variables:first_8, after first_7, 5d\n\nsection PG03\nAnálisis univariado:first_9, 2023-05-03, 12d\nAnálisis bivariado:first_10, 2023-05-10, 10d\nAnálisis multivariado:first_11, 2023-05-15, 7d\nEscribir análisis:first_12, after first_11, 2d\n\nsection Informe PG1\nCorrecciones:first_13, 2023-05-26, 3d\nUnion de PG0x:first_14, after first_13, 2d\nVerificar ortografía:first_15, after first_14, 2d\nInforme prolijo:first_16, after first_15, 2d\n"},"evals":[],"jsHooks":[]}</script>
 </div>
 </div>
 </div>
@@ -4151,10 +4151,10 @@ variables.</p>
 <h3>Encuestas de Stak Overflow</h3>
 <table>
 <colgroup>
-<col width="17%" />
-<col width="13%" />
-<col width="46%" />
-<col width="22%" />
+<col width="21%" />
+<col width="21%" />
+<col width="34%" />
+<col width="21%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -4269,10 +4269,10 @@ desarrollador</td>
 <h3>PLDB Lenguajes de Programación</h3>
 <table>
 <colgroup>
-<col width="16%" />
-<col width="13%" />
-<col width="46%" />
-<col width="23%" />
+<col width="21%" />
+<col width="21%" />
+<col width="34%" />
+<col width="21%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -4497,7 +4497,7 @@ planguages &lt;- df</code></pre>
 ganen mínimo 3600 dólares anuales. Y para el máximo, no consideraremos
 los valores atípicos que sobrepasen el tercer cuantil más 1.5 veces el
 Rango Intercuantil, es decir, menores a <code>249153</code></p>
-<pre class="r"><code>#encuesta &lt;- encuesta[encuesta$Salary &gt; 3600, ]
+<pre class="r"><code>encuesta &lt;- encuesta[encuesta$Salary &gt; 3600, ]
 
 ric &lt;- IQR(encuesta$Salary)
 
@@ -4599,10 +4599,10 @@ variables que se relacionan con nuestros objetivos de investigación.</p>
 <h3>Encuestas de Stakoverflow</h3>
 <table>
 <colgroup>
-<col width="14%" />
-<col width="12%" />
-<col width="37%" />
-<col width="34%" />
+<col width="22%" />
+<col width="22%" />
+<col width="29%" />
+<col width="26%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -4657,10 +4657,10 @@ say</em>”</td>
 <h3>PLDB Lenguajes de Programación</h3>
 <table>
 <colgroup>
-<col width="12%" />
-<col width="10%" />
-<col width="35%" />
-<col width="41%" />
+<col width="22%" />
+<col width="22%" />
+<col width="25%" />
+<col width="30%" />
 </colgroup>
 <thead>
 <tr class="header">
